2009-01-23  Jesse Jones  <jesjones@mindspring.com>

	* Makefile.am: fixed line continuations.

2009-01-20  Jesse Jones  <jesjones@mindspring.com>

	* UseFlagsAttributeRule.cs: fixed misspelled "Serializeable", 
	improved solution text.

2009-01-12  Jesse Jones  <jesjones@mindspring.com>

	* UseFlagsAttributeRule.cs, Makefile.am: added new rule.

2009-01-09  Jesse Jones  <jesjones@mindspring.com>

	* FlagsShouldNotDefineAZeroValueRule.cs: fixed the description so
	that it points to bitwise operators instead of boolean operators as
	being the problem, fixed some misspellings/bad english in the 
	description, added [Serializable] to example code.

2008-12-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRefAndOutParametersRule.cs: Use HasParameters
	* ConsiderConvertingFieldToNullableRule.cs: Use HasFields

2008-11-30  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidEmptyInterfaceRule.cs: Use HasMethods and HasInterfaces
	* AvoidMultidimensionalIndexerRule.cs: Use HasParameters
	* AvoidPropertiesWithoutGetAccessorRule.cs: Use HasProperties
	* ConsiderAddingInterfaceRule.cs: Use HasMethods, HasParameters and
	HasGenericParameters.
	* ConsiderUsingStaticTypeRule.cs: Use HasFields, HasMethods and
	HasConstructors
	* DeclareEventHandlersCorrectlyRule.cs: Use HasEvents and 
	HasParameters
	* MarkAssemblyWithAttributeRule.cs: Use HasCustomAttributes
	* UsingCloneWithoutImplementingICloneableRule.cs: Use HasParameters

2008-11-20  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRefAndOutParametersRule.cs: Specify StringComparison.Ordinal
	when calling String.[Starts|Ends]With.
	* ConsiderConvertingFieldToNullableRule.cs: Specify StringComparison.
	Ordinal when calling String.EndsWith.
	* ConsiderConvertingMethodToPropertyRule.cs: Specify 
	StringComparison.Ordinal when calling String.EndsWith.
	* ImplementIComparableCorreclyRule.cs: Apply the rule to types that
	directly implement IComparable.
	* InternalNamespacesShouldNotExposeTypesRule.cs: Specify 