@@ -42,6 +42,7 @@ rules_sources =  \
 	TypesWithDisposableFieldsShouldBeDisposableRule.cs \
 	TypesWithNativeFieldsShouldBeDisposableRule.cs \
 	UseFlagsAttributeRule.cs \
+	UseCorrectDisposeSignaturesRule.cs
 	UsingCloneWithoutImplementingICloneableRule.cs
 
 tests_sources = \
@@ -84,4 +85,5 @@ tests_sources = \
 	TypesWithDisposableFieldsShouldBeDisposableTest.cs \
 	TypesWithNativeFieldsShouldBeDisposableTest.cs \
 	UseFlagsAttributeTest.cs \
+	UseCorrectDisposeSignaturesTest.cs
 	UsingCloneWithoutImplementingICloneableTest.cs
