@@ -1,3 +1,8 @@
+2009-02-21  Jesse Jones  <jesjones@mindspring.com>
+
+	* Makefile.am, UseCorrectDisposeSignaturesRule.cs: added
+	new rule.
+
 2009-01-23  Jesse Jones  <jesjones@mindspring.com>
 
 	* Makefile.am: fixed line continuations.
